CmpProject/COOLgrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from COOLgrammar.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


using CmpProject;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class COOLgrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		POINT_COMMA=1, COMA=2, CORCHETE_AB=3, CORCHETE_CE=4, LLAVE_AB=5, LLAVE_CE=6, 
		POINT=7, PARENT_AB=8, PARENT_CE=9, OP_EQUAL=10, OP_MINOR=11, OP_MINOR_EQUAL=12, 
		OP_PLUS=13, OP_MINUS=14, OP_MULT=15, OP_DIV=16, OP_NEG=17, OP_ASSIGN=18, 
		OP_TYPED=19, OP_CASE=20, OP_CLASS=21, IF=22, THEN=23, ELSE=24, FI=25, 
		WHILE=26, LOOP=27, POOL=28, LET=29, IN=30, CASE=31, OF=32, ESAC=33, TRUE=34, 
		FALSE=35, CLASS=36, INHERITS=37, ISVOID=38, NEW=39, NOT=40, INTEGER=41, 
		TYPE=42, ID=43, STRING=44, WS=45, COMMENTS=46;
	public const int
		RULE_program = 0, RULE_class = 1, RULE_feature = 2, RULE_formal = 3, RULE_expr = 4, 
		RULE_letRule = 5, RULE_params = 6, RULE_declaration = 7, RULE_branch = 8, 
		RULE_expr_list = 9;
	public static readonly string[] ruleNames = {
		"program", "class", "feature", "formal", "expr", "letRule", "params", 
		"declaration", "branch", "expr_list"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "','", "'['", "']'", "'{'", "'}'", "'.'", "'('", "')'", "'='", 
		"'<'", "'<='", "'+'", "'-'", "'*'", "'/'", "'~'", "'<-'", "':'", "'=>'", 
		"'@'", "'if'", "'then'", "'else'", "'fi'", "'while'", "'loop'", "'pool'", 
		"'let'", "'in'", "'case'", "'of'", "'esac'", "'true'", "'false'", "'class'", 
		"'inherits'", "'isvoid'", "'new'", "'not'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "POINT_COMMA", "COMA", "CORCHETE_AB", "CORCHETE_CE", "LLAVE_AB", 
		"LLAVE_CE", "POINT", "PARENT_AB", "PARENT_CE", "OP_EQUAL", "OP_MINOR", 
		"OP_MINOR_EQUAL", "OP_PLUS", "OP_MINUS", "OP_MULT", "OP_DIV", "OP_NEG", 
		"OP_ASSIGN", "OP_TYPED", "OP_CASE", "OP_CLASS", "IF", "THEN", "ELSE", 
		"FI", "WHILE", "LOOP", "POOL", "LET", "IN", "CASE", "OF", "ESAC", "TRUE", 
		"FALSE", "CLASS", "INHERITS", "ISVOID", "NEW", "NOT", "INTEGER", "TYPE", 
		"ID", "STRING", "WS", "COMMENTS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "COOLgrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static COOLgrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public COOLgrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public COOLgrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ClassContext _class;
		public IList<ClassContext> _classes = new List<ClassContext>();
		public ITerminalNode Eof() { return GetToken(COOLgrammarParser.Eof, 0); }
		public ClassContext[] @class() {
			return GetRuleContexts<ClassContext>();
		}
		public ClassContext @class(int i) {
			return GetRuleContext<ClassContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 21;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 20; _localctx._class = @class();
				_localctx._classes.Add(_localctx._class);
				}
				}
				State = 23;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==CLASS );
			State = 25; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassContext : ParserRuleContext {

		public ClassContext father;
		public IToken type;

		public IToken inherits;
		public FeatureContext _feature;
		public IList<FeatureContext> _features = new List<FeatureContext>();
		public ITerminalNode[] TYPE() { return GetTokens(COOLgrammarParser.TYPE); }
		public ITerminalNode TYPE(int i) {
			return GetToken(COOLgrammarParser.TYPE, i);
		}
		public FeatureContext[] feature() {
			return GetRuleContexts<FeatureContext>();
		}
		public FeatureContext feature(int i) {
			return GetRuleContext<FeatureContext>(i);
		}
		public ClassContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_class; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterClass(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitClass(this);
		}
	}

	[RuleVersion(0)]
	public ClassContext @class() {
		ClassContext _localctx = new ClassContext(Context, State);
		EnterRule(_localctx, 2, RULE_class);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27; Match(CLASS);
			State = 28; _localctx.type = Match(TYPE);
			State = 31;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==INHERITS) {
				{
				State = 29; Match(INHERITS);
				State = 30; _localctx.inherits = Match(TYPE);
				}
			}

			State = 33; Match(LLAVE_AB);
			State = 37;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 34; _localctx._feature = feature();
				_localctx._features.Add(_localctx._feature);
				}
				}
				State = 39;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 40; Match(LLAVE_CE);
			State = 41; Match(POINT_COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FeatureContext : ParserRuleContext {
		public string idText;
		public string typeText;
		public FeatureContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_feature; } }
	 
		public FeatureContext() { }
		public virtual void CopyFrom(FeatureContext context) {
			base.CopyFrom(context);
			this.idText = context.idText;
			this.typeText = context.typeText;
		}
	}
	public partial class MethodContext : FeatureContext {
		public IToken methodName;
		public FormalContext _formal;
		public IList<FormalContext> _formals = new List<FormalContext>();
		public IToken TypeReturn;
		public ExprContext exprBody;
		public ITerminalNode ID() { return GetToken(COOLgrammarParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(COOLgrammarParser.TYPE, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public FormalContext[] formal() {
			return GetRuleContexts<FormalContext>();
		}
		public FormalContext formal(int i) {
			return GetRuleContext<FormalContext>(i);
		}
		public MethodContext(FeatureContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterMethod(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitMethod(this);
		}
	}
	public partial class AttributeContext : FeatureContext {
		public DeclarationContext decl;
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public AttributeContext(FeatureContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterAttribute(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitAttribute(this);
		}
	}

	[RuleVersion(0)]
	public FeatureContext feature() {
		FeatureContext _localctx = new FeatureContext(Context, State);
		EnterRule(_localctx, 4, RULE_feature);
		int _la;
		try {
			State = 68;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				_localctx = new MethodContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 43; ((MethodContext)_localctx).methodName = Match(ID);
				State = 44; Match(PARENT_AB);
				State = 53;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==ID) {
					{
					State = 45; ((MethodContext)_localctx)._formal = formal();
					((MethodContext)_localctx)._formals.Add(((MethodContext)_localctx)._formal);
					State = 50;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMA) {
						{
						{
						State = 46; Match(COMA);
						State = 47; ((MethodContext)_localctx)._formal = formal();
						((MethodContext)_localctx)._formals.Add(((MethodContext)_localctx)._formal);
						}
						}
						State = 52;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
				}

				State = 55; Match(PARENT_CE);
				State = 56; Match(OP_TYPED);
				State = 57; ((MethodContext)_localctx).TypeReturn = Match(TYPE);
				State = 58; Match(LLAVE_AB);
				State = 59; ((MethodContext)_localctx).exprBody = expr(0);
				State = 60; Match(LLAVE_CE);
				State = 61; Match(POINT_COMMA);
				 
								((MethodContext)_localctx).idText = (((MethodContext)_localctx).methodName).Text; 
								((MethodContext)_localctx).typeText = (((MethodContext)_localctx).TypeReturn).Text;
							
				}
				break;
			case 2:
				_localctx = new AttributeContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 64; ((AttributeContext)_localctx).decl = declaration();
				State = 65; Match(POINT_COMMA);
				 
							  ((AttributeContext)_localctx).idText = ((AttributeContext)_localctx).decl.idText;
							  ((AttributeContext)_localctx).typeText = ((AttributeContext)_localctx).decl.typeText; 
							
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormalContext : ParserRuleContext {
		public string idText;
		public string typeText;
		public IToken id;
		public IToken type;
		public ITerminalNode ID() { return GetToken(COOLgrammarParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(COOLgrammarParser.TYPE, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formal; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterFormal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitFormal(this);
		}
	}

	[RuleVersion(0)]
	public FormalContext formal() {
		FormalContext _localctx = new FormalContext(Context, State);
		EnterRule(_localctx, 6, RULE_formal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; _localctx.id = Match(ID);
			State = 71; Match(OP_TYPED);
			State = 72; _localctx.type = Match(TYPE);
			 _localctx.idText = (_localctx.id).Text; _localctx.typeText = (_localctx.type).Text;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public IType computedType;
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
			this.computedType = context.computedType;
		}
	}
	public partial class ArithContext : ExprContext {
		public ExprContext left;
		public IToken op;
		public ExprContext right;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode OP_MULT() { return GetToken(COOLgrammarParser.OP_MULT, 0); }
		public ITerminalNode OP_DIV() { return GetToken(COOLgrammarParser.OP_DIV, 0); }
		public ITerminalNode OP_PLUS() { return GetToken(COOLgrammarParser.OP_PLUS, 0); }
		public ITerminalNode OP_MINUS() { return GetToken(COOLgrammarParser.OP_MINUS, 0); }
		public ArithContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterArith(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitArith(this);
		}
	}
	public partial class DispatchContext : ExprContext {
		public ExprContext expresion;
		public IToken type;
		public IToken id;
		public ExprContext _expr;
		public IList<ExprContext> _expresions = new List<ExprContext>();
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode ID() { return GetToken(COOLgrammarParser.ID, 0); }
		public ITerminalNode TYPE() { return GetToken(COOLgrammarParser.TYPE, 0); }
		public DispatchContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterDispatch(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitDispatch(this);
		}
	}
	public partial class IntegerExprContext : ExprContext {
		public IToken integer;
		public ITerminalNode INTEGER() { return GetToken(COOLgrammarParser.INTEGER, 0); }
		public IntegerExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterIntegerExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitIntegerExpr(this);
		}
	}
	public partial class InParenthesisExprContext : ExprContext {
		public ExprContext expresion;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public InParenthesisExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterInParenthesisExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitInParenthesisExpr(this);
		}
	}
	public partial class CondExprContext : ExprContext {
		public ExprContext ifExpr;
		public ExprContext thenExpr;
		public ExprContext elseExpr;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public CondExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterCondExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitCondExpr(this);
		}
	}
	public partial class LetExprContext : ExprContext {
		public LetRuleContext let;
		public LetRuleContext letRule() {
			return GetRuleContext<LetRuleContext>(0);
		}
		public LetExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterLetExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitLetExpr(this);
		}
	}
	public partial class StringExprContext : ExprContext {
		public IToken @string;
		public ITerminalNode STRING() { return GetToken(COOLgrammarParser.STRING, 0); }
		public StringExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterStringExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitStringExpr(this);
		}
	}
	public partial class CompaExprContext : ExprContext {
		public ExprContext left;
		public IToken op;
		public ExprContext right;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode OP_MINOR() { return GetToken(COOLgrammarParser.OP_MINOR, 0); }
		public ITerminalNode OP_MINOR_EQUAL() { return GetToken(COOLgrammarParser.OP_MINOR_EQUAL, 0); }
		public ITerminalNode OP_EQUAL() { return GetToken(COOLgrammarParser.OP_EQUAL, 0); }
		public CompaExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterCompaExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitCompaExpr(this);
		}
	}
	public partial class NotExprContext : ExprContext {
		public ExprContext expresion;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public NotExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterNotExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitNotExpr(this);
		}
	}
	public partial class WhileExprContext : ExprContext {
		public ExprContext whileExpr;
		public ExprContext loopExpr;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public WhileExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterWhileExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitWhileExpr(this);
		}
	}
	public partial class NegExprContext : ExprContext {
		public ExprContext expresion;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public NegExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterNegExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitNegExpr(this);
		}
	}
	public partial class IsvoidExprContext : ExprContext {
		public ExprContext expresion;
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public IsvoidExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterIsvoidExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitIsvoidExpr(this);
		}
	}
	public partial class BlockExprContext : ExprContext {
		public ExprContext _expr;
		public IList<ExprContext> _expresions = new List<ExprContext>();
		public ExprContext finalExpresion;
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public BlockExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterBlockExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitBlockExpr(this);
		}
	}
	public partial class CaseExprContext : ExprContext {
		public ExprContext expresion;
		public BranchContext firstBranch;
		public BranchContext _branch;
		public IList<BranchContext> _branches = new List<BranchContext>();
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public BranchContext[] branch() {
			return GetRuleContexts<BranchContext>();
		}
		public BranchContext branch(int i) {
			return GetRuleContext<BranchContext>(i);
		}
		public CaseExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterCaseExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitCaseExpr(this);
		}
	}
	public partial class BoolExprContext : ExprContext {
		public IToken @bool;
		public ITerminalNode TRUE() { return GetToken(COOLgrammarParser.TRUE, 0); }
		public ITerminalNode FALSE() { return GetToken(COOLgrammarParser.FALSE, 0); }
		public BoolExprContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.EnterBoolExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICOOLgrammarListener typedListener = listener as ICOOLgrammarListener;
			if (typedListener != null) typedListener.ExitBoolExpr(this);
		}
	}
	public partial class SelfDispatchContext : ExprContext {
		public IToken id;
		public ExprContext _expr;
		public IList<ExprContext> _expresions = new List<ExprContext>();
		public ITerminalNode ID() { return GetToken(COOLgrammarParser.ID, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public SelfDispatchContext(ExprContext context) { CopyFrom(context); }
